Fixed layout issue with map container

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -5,7 +5,7 @@
   .fancy-title h2 {
   padding-left: 30px;
   }
-  .info-container, .data-container, .map-container, .footer-content {
+  .info-container, .data-container, .footer-content {
   padding: 0 30px;
   }
 }
